--- a/RPCalculator/index.html
+++ b/RPCalculator/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="Content/rpcalculator.min.css" />
 </head>
 <body>
+    <a href="#" class="btn btn-primary">Home</a>
     <div ng-view></div>
     <script src="Scripts/angular.min.js"></script>
     <script src="Scripts/angular-route.min.js"></script>
