--- a/RPCalculator/index.html
+++ b/RPCalculator/index.html
@@ -9,20 +9,45 @@
     <link rel="stylesheet" type="text/css" href="Content/rpcalculator.min.css" />
 </head>
 <body>
-    <nav class="navbar navbar-expand navbar-dark bg-primary fixed-top">
+    <nav class="navbar navbar-expand navbar-dark bg-primary fixed-top" ng-controller="menuController as $menu">
         <span class="navbar-brand mb-0 h1">Dance Scores</span>
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="#" class="nav-link text-nowrap">
                         <i class="fa fa-fw fa-home"></i>
                         <span>Home</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link text-nowrap">
+                        <i class="fa fa-fw fa-book"></i>
+                        <span>Workbook</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link text-nowrap" ng-click="$menu.upload($event)">
+                        <i class="fa fa-fw fa-upload"></i>
+                        <span>Upload</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link text-nowrap" ng-click="$menu.download($event)">
+                        <i class="fa fa-fw fa-download"></i>
+                        <span>Download</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link text-nowrap" ng-click="$menu.example($event)">
+                        <i class="fa fa-fw fa-trophy"></i>
+                        <span>Example</span>
                     </a>
                 </li>
             </ul>
         </div>
     </nav>
     <div ng-view></div>
+    <input id="upload" type="file" accept=".json" upload class="invisible" />
     <script src="Scripts/angular.min.js"></script>
     <script src="Scripts/angular-route.min.js"></script>
     <script src="Scripts/ngStorage.min.js"></script>
