--- a/RPCalculator/index.html
+++ b/RPCalculator/index.html
@@ -7,11 +7,15 @@
     <link rel="stylesheet" type="text/css" href="Content/bootswatch/yeti/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="Content/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="Content/rpcalculator.min.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
-    <nav class="navbar navbar-expand navbar-dark bg-primary fixed-top" ng-controller="menuController as $menu">
-        <span class="navbar-brand mb-0 h1">Dance Scores</span>
-        <div class="collapse navbar-collapse">
+    <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top" ng-controller="menuController as $menu">
+        <a class="navbar-brand" href="#">Skating System</a>
+        <button type="button" class="navbar-toggler" ng-click="$menu.collapsed = !$menu.collapsed">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="navbar-collapse" ng-class="{ 'collapse': $menu.collapsed }">
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a href="#" class="nav-link text-nowrap">
