--- a/RPCalculator/index.html
+++ b/RPCalculator/index.html
@@ -10,47 +10,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top" ng-controller="menuController as $menu">
-        <a class="navbar-brand" href="#">Skating System</a>
-        <button type="button" class="navbar-toggler" ng-click="$menu.collapsed = !$menu.collapsed">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="navbar-collapse" ng-class="{ 'collapse': $menu.collapsed }">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a href="#" class="nav-link text-nowrap">
-                        <i class="fa fa-fw fa-home"></i>
-                        <span>Home</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link text-nowrap">
-                        <i class="fa fa-fw fa-book"></i>
-                        <span>Workbook</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link text-nowrap" ng-click="$menu.upload($event)">
-                        <i class="fa fa-fw fa-upload"></i>
-                        <span>Upload</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link text-nowrap" ng-click="$menu.download($event)">
-                        <i class="fa fa-fw fa-download"></i>
-                        <span>Download</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link text-nowrap" ng-click="$menu.example($event)">
-                        <i class="fa fa-fw fa-trophy"></i>
-                        <span>Example</span>
-                    </a>
-                </li>
-            </ul>
+    <div class="d-block d-sm-none">
+        <div class="container">
+            <div class="alert alert-danger text-center">
+                <h5 class="h5">
+                    <i class="fa fa-fw fa-frown-o"></i>
+                    <span>Your screen is not wide enough to display the application correctly.</span>
+                    <span>Try resizing your browser window, rotating your device to landscape mode, or try again on a device with a larger screen.</span>
+                </h5>
+            </div>
         </div>
-    </nav>
-    <div ng-view></div>
+    </div>
+    <div class="d-none d-sm-block">
+        <ng-include src="'Views/menu.html'"></ng-include>
+        <div ng-view></div>
+    </div>
     <input id="upload" type="file" accept=".json" upload class="invisible" />
     <script src="Scripts/angular.min.js"></script>
     <script src="Scripts/angular-route.min.js"></script>
