--- a/RPCalculator/index.html
+++ b/RPCalculator/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>RPCalculator</title>
+    <link rel="shortcut icon" type="image/png" href="/favicon.png" />
     <link rel="stylesheet" type="text/css" href="Content/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="Content/bootswatch/yeti/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="Content/font-awesome.min.css" />
