--- a/RPCalculator/index.html
+++ b/RPCalculator/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" type="text/css" href="Content/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="Content/rpcalculator.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:title" content="Dance Scores" />
+    <meta property="og:url" content="http://dancescores.000webhostapp.com" />
+    <meta property="og:image" content="http://dancescores.000webhostapp.com/trophy.jpg" />
 </head>
 <body>
     <div class="d-block d-sm-none">
