--- a/RPCalculator/index.html
+++ b/RPCalculator/index.html
@@ -30,9 +30,6 @@
         <div ng-view></div>
     </div>
     <input id="upload" type="file" accept=".json" upload class="invisible" />
-    <script src="Scripts/angular.min.js"></script>
-    <script src="Scripts/angular-route.min.js"></script>
-    <script src="Scripts/ngStorage.min.js"></script>
-    <script src="Scripts/rpcalculator/rpcalculator.min.js"></script>
+    <script src="rpc.min.js"></script>
 </body>
 </html>
