--- a/RPCalculator/index.html
+++ b/RPCalculator/index.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html ng-app="rpcalc">
+<html ng-app="rpcalc" manifest="rpcalculator.manifest">
 <head>
     <meta charset="utf-8" />
     <title>RPCalculator</title>
@@ -12,6 +12,7 @@
     <meta property="og:title" content="Dance Scores" />
     <meta property="og:url" content="http://dancescores.000webhostapp.com" />
     <meta property="og:image" content="http://dancescores.000webhostapp.com/trophy.jpg" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
 </head>
 <body>
     <div class="d-block d-sm-none">
