--- a/RPCalculator/index.html
+++ b/RPCalculator/index.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html ng-app="rpcalc" manifest="rpcalculator.manifest">
+<html ng-app="rpcalc">
 <head>
     <meta charset="utf-8" />
     <title>RPCalculator</title>
