--- a/RPCalculator/index.html
+++ b/RPCalculator/index.html
@@ -5,25 +5,13 @@
     <title>RPCalculator</title>
     <link rel="shortcut icon" type="image/png" href="/favicon.png" />
     <link rel="stylesheet" type="text/css" href="Content/bootstrap.min.css" />
-    
     <link rel="stylesheet" type="text/css" href="Content/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="Content/rpcalculator.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="apple-mobile-web-app-capable" content="yes">
 </head>
 <body>
-    <div class="d-block d-sm-none">
-        <div class="container">
-            <div class="alert alert-danger text-center">
-                <h5 class="h5">
-                    <i class="fa fa-fw fa-frown-o"></i>
-                    <span>Your screen is not wide enough to display the application correctly.</span>
-                    <span>Try resizing your browser window, rotating your device to landscape mode, or try again on a device with a larger screen.</span>
-                </h5>
-            </div>
-        </div>
-    </div>
-    <div class="d-none d-sm-block">
+    <div>
         <ng-include src="'Views/menu.html'"></ng-include>
         <div ng-view></div>
     </div>
