--- a/RPCalculator/index.html
+++ b/RPCalculator/index.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" type="image/png" href="/favicon.png" />
     <link rel="stylesheet" type="text/css" href="Content/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="Content/font-awesome.min.css" />
+    <link rel="stylesheet" type="text/css" href="Content/animate.min.css" />
     <link rel="stylesheet" type="text/css" href="Content/rpcalculator.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="apple-mobile-web-app-capable" content="yes">
